# stt_webapi_server

./: Dockerfile  Dockerfile.gpu  LICENSE  README.md  pyproject.toml
app/: server.py
model_downloader/: pre_download.py
